<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TranslatorFragment"
    android:id="@+id/translatorFragmentRoot"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/textInputStyle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:inputType="textMultiLine">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sourceTextEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="Source text"/>


    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currentLangButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginRight="8dp"
            android:text="@string/current_lang"
            style="@style/Widget.Material3.Button.TextButton"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/switchLangButton"
            style="@style/IconOnlyStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text=""
            app:icon="@drawable/ic_action_swap"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/targetLangButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:text="@string/target_lang"
            style="@style/Widget.Material3.Button.TextButton"/>
    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/toTranslateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textAllCaps="false"
        style="@style/Widget.Material3.Button.OutlinedButton"/>



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/translatedTextTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:textSize="18sp"
        android:text="Translated Text" />
</LinearLayout>